--- a/Miniprojekt2_disp.Rmd
+++ b/Miniprojekt2_disp.Rmd
@@ -92,7 +92,25 @@ data("cars")
 ## Algoritmisk differentation 
 
 \begin{itemize}
-  \item 
+  \item Forward:
+  \begin{itemize}
+    \item let $y=f(u), \ u=g(x), \quad x\in \mathbb{R}^n,  u \in \mathbb{R}^m$.
+    \item $\frac{\partial y}{\partial x_i}= \sum_{j=1}^m \frac{\partial y}{\partial u_j} \frac{\partial u_j}{\partial x_i}$
+    \item Ide: Hvis $\frac{\partial y}{\partial x_1}, $Start med $x_1 ,\ldots , x_n$, $\frac{\partial x_1}{\partial x_1}=1$ og $\frac{\partial x_2}{\partial x_1}, \ldots  \frac{\partial x_n}{\partial x_1}$.
+    \item Evaluerer funktion indefra.
+  \end{itemize}
+  \item Reverse: 
+  \begin{itemize}
+    \item Antag $y\in \mathbb{R}$
+    \item $v_i=\frac{\partial y}{\partial v_i}= \sum_{v_j\in \text{children}(v_i)}\frac{\partial y}{\partial v_j}\frac{\partial v_j}{\partial v_i}$
+    \item Ide: Start med $x$ værdierne, og evaluerer funktion i alle $v_i$, gem disse. Start nu indefra $v_{max(i)}=\bar{y}=1$, tjek hvad $v_{max(i)}$ er barn til. Evaluerer disse ved brug af ovenstående formel. Gør dette indtil $\bar{v_0},\ldots \bar{v}_{-(n+1)}$  er fundet. 
+  \end{itemize}
+  \item Forward vs reverse:
+  \begin{itemize}
+    \item for $f: \mathbb{R}^n \rightarrow \mathbb{R}^m$
+    \item $\text{cost}_{forward}(f)=n \ O(\text{cost}(f))$
+    \item $\text{cost}_{reverse}(f)=m \ O(\text{cost}(f))$
+  \end{itemize}
 \end{itemize}
 
 # Exercise 1
